<resources>
    <string name="app_name">MadLevel1Task2</string>
    <string name="main_text">Conjunction (AND)</string>
    <string name="column_one">A</string>
    <string name="column_two">B</string>
    <string name="answer_column">A ^ B</string>
    <string name="value_true">T</string>
    <string name="value_false">F</string>
    <string name="answer_hint" />
    <string name="submit_button">Submit</string>
    <string name="correct_answers">You have %d answers correct</string>
    <string name="all_correct">All your answers are correct!</string>
</resources>